# manadi

./: README.md  pyproject.toml  requirements.txt  setup.py
manadi/: logger.py  utils.py
manadi/tests/: test.py
manadiai/: logger.py  storage.py
manadiai/tests/: test.py
streamlit/: app.py  requirements.txt
