[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manadiai"
version = "0.1.0"
description = "Capture, organize, and reuse GenAI interactions to fine-tune your personalized AI."
authors = [
  { name="Your Name", email="your.email@example.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "python-dateutil"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "flake8>=6.0",
  "mypy>=1.0"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=manadiai --cov-report=term-missing"
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

